<resources>
    <string name="app_name">twitter-project</string>

    <!-- TO General actions page-->
    <string name="action_save">Сохранить</string>
    <string name="action_add">Добавить</string>
    <string name="action_continue">Продолжить</string>
    <string name="action_cansel">Отменить</string>

    <!-- TO Main page-->
    <string name="field_retwitted">Retwitted from: %s</string>

    <string name="action_delete">Удалить</string>
    <string name="action_edit">Редактировать</string>

    <string name="menu_profile">Профиль</string>
    <string name="menu_authors">Список авторов</string>

    <!-- TO Add Msg page-->
    <string name="label_msg">Сообщение:</string>
    <string name="error_msg_empty">Сообщение не должно быть пустым!</string>

    <!-- TO Login page-->
    <string name="prompt_login">Логин</string>
    <string name="prompt_name">Имя</string>
    <string name="prompt_password">Пароль</string>

    <string name="action_sign_in">Войти</string>
    <string name="action_sign_up_prepare">Регистрация</string>

    <string name="action_back">Назад</string>
    <string name="action_sign_up">Зарегистрироваться</string>

    <string name="action_logout">Выйти</string>

    <string name="error_invalid_login">Некорректное имя пользователя!</string>
    <string name="error_login_exists">Пользователь уже существует!</string>
    <string name="error_login_no_exists">Пользователь не существует!</string>
    <string name="error_invalid_password">Пароль слишком короткий!</string>
    <string name="error_incorrect_password">Пароль некорректен!</string>
    <string name="error_field_required">Поле обязательно для заполнения</string>
    <string name="error_old_credentials">Чтобы изменить параметры вашего профелия, Вам нужно выйти и войти заново</string>

</resources>
