<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background = "@android:color/transparent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/add_text"
            android:id="@+id/add_label"
            android:text="@string/label_msg"/>
        <EditText
            android:id="@+id/add_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textAutoCorrect|textMultiLine" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/button_cansel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/action_cansel" />

            <Button
                android:id="@+id/button_save"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/action_add" />

        </RelativeLayout>

</LinearLayout>